deployment/k8s-base-layer-deployment.yaml
###################################
# sta-service
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sta-service
  labels:
    app: sta-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sta-service
  template:
    metadata:
      labels:
        app: sta-service
    spec:
      containers:
        - name: sta-service
          image: us-central1-docker.pkg.dev/nomoniliticasmiso2025/no-monoliticas/sta-service:1.0.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "150m"
            limits:
              memory: "128Mi"
              cpu: "305m"
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: sta-service-service
  annotations:
    cloud.google.com/backend-config: '{"default": "sta-service-config"}'
spec:
  type: NodePort
  selector:
    app: sta-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 31010
---
