deployment/k8s-ingress-deloyment.yaml
###################################
# INGRESS
###################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-no-monolith-k8s
  labels:
    name: gateway-ingress-no-monolith-k8s
spec:
  rules:
    - http:
        paths:
          - path: /ingesta
            pathType: Prefix
            backend:
              service:
                name: sta-service-service
                port:
                  number: 80
          - path: /bff
            pathType: Prefix
            backend:
              service:
                name: bff-service-service
                port:
                  number: 80
          - path: /anonimizador
            pathType: Prefix
            backend:
              service:
                name: anonimizador-service-service
                port:
                  number: 80
          - path: /etiquetado
            pathType: Prefix
            backend:
              service:
                name: etiquetado-service-service
                port:
                  number: 80
